# ryvos

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh  ryvos.toml.example  security.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/ryvos-agent/: Cargo.toml
crates/ryvos-agent/src/: agent_loop.rs  approval.rs  audit.rs  checkpoint.rs  context.rs  director.rs  evaluator.rs  gate.rs  guardian.rs  healing.rs  heartbeat.rs  intelligence.rs  judge.rs  lib.rs  orchestrator.rs  output_validator.rs  prime.rs  run_log.rs  safety_memory.rs  scheduler.rs  session.rs
crates/ryvos-agent/src/graph/: edge.rs  executor.rs  handoff.rs  mod.rs  node.rs
crates/ryvos-channels/: Cargo.toml
crates/ryvos-channels/src/: discord.rs  dispatch.rs  lib.rs  pairing.rs  slack.rs  telegram.rs  util.rs  whatsapp.rs
crates/ryvos-core/: Cargo.toml
crates/ryvos-core/src/: config.rs  error.rs  event.rs  goal.rs  hooks.rs  lib.rs  security.rs  traits.rs  types.rs
crates/ryvos-gateway/: Cargo.toml
crates/ryvos-gateway/src/: auth.rs  connection.rs  lane.rs  lib.rs  middleware.rs  oauth.rs  protocol.rs  routes.rs  server.rs  state.rs  static_files.rs
crates/ryvos-gateway/ui/: index.html
crates/ryvos-gateway/ui-src/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
crates/ryvos-gateway/ui-src/src/: App.svelte  app.css
crates/ryvos-gateway/ui-src/src/lib/: api.js  stores.js  ws.js
crates/ryvos-gateway/ui-src/src/lib/components/: ActivityFeed.svelte  CommandPalette.svelte  LoginOverlay.svelte  MetricCard.svelte  Sidebar.svelte
crates/ryvos-gateway/ui-src/src/lib/pages/: AuditTrail.svelte  Channels.svelte  Chat.svelte  ConfigEditor.svelte  Costs.svelte  Dashboard.svelte  Goals.svelte  Graph.svelte  Integrations.svelte  Runs.svelte  Sessions.svelte  Settings.svelte  VikingBrowser.svelte
crates/ryvos-gateway/ui/assets/: app.js  index-8Cn3fb7z.js  index-B-PitWrr.js  index-B0CXyhal.js  index-BQCeR0Gn.js  index-Bk1ajMkf.css  index-C9Jl1mjj.js  index-CcDNWNRU.js  index-CnYswPNy.js  index-D00jRZ9d.js  index-DXsqGtCd.js  index-DZs-ZSX9.css  index-DsHUdXF5.css  index-DshiJLV6.css  index-G7gGabiR.js  index-INWxJYEB.css  index-Rc4C6AMb.js  index-gSzDUppw.css  index-nmEOOsDO.css  style.css
crates/ryvos-llm/: Cargo.toml
crates/ryvos-llm/src/: lib.rs  retry.rs  streaming.rs
crates/ryvos-llm/src/providers/: anthropic.rs  azure.rs  bedrock.rs  claude_code.rs  cohere.rs  copilot.rs  gemini.rs  mod.rs  openai.rs  presets.rs
crates/ryvos-mcp/: Cargo.toml
crates/ryvos-mcp/src/: bridge.rs  client.rs  handler.rs  lib.rs  resource_tool.rs
crates/ryvos-mcp/src/server/: audit_reader.rs  handler.rs  mod.rs
crates/ryvos-mcp/src/server/tools/: audit.rs  healing.rs  memory.rs  mod.rs  safety.rs  viking.rs
crates/ryvos-memory/: Cargo.toml
crates/ryvos-memory/src/: cost_store.rs  embeddings.rs  integration_store.rs  lib.rs  pricing.rs  session_meta.rs  store.rs  viking.rs  viking_store.rs
crates/ryvos-skills/: Cargo.toml
crates/ryvos-skills/src/: lib.rs  manifest.rs  registry.rs  skill_tool.rs
crates/ryvos-test-utils/: Cargo.toml
crates/ryvos-test-utils/src/: fixtures.rs  lib.rs  mock_channel.rs  mock_llm.rs  mock_store.rs  mock_tool.rs
crates/ryvos-tools/: Cargo.toml
crates/ryvos-tools/src/: lib.rs  registry.rs
crates/ryvos-tools/src/builtin/: apply_patch.rs  bash.rs  browser.rs  code.rs  data.rs  database.rs  edit.rs  filesystem.rs  git.rs  glob.rs  google.rs  grep.rs  jira.rs  linear.rs  memory.rs  memory_search.rs  memory_write.rs  mod.rs  network.rs  notification.rs  notion.rs  read.rs  scheduling.rs  sessions.rs  spawn_agent.rs  system.rs  viking.rs  web_fetch.rs  web_search.rs  write.rs
crates/ryvos-tui/: Cargo.toml
crates/ryvos-tui/src/: app.rs  event.rs  input.rs  lib.rs  ui.rs
docs/: README.md  STYLE.md  glossary.md
docs/adr/: 001-rust-runtime.md  002-passthrough-security.md  003-viking-hierarchical-memory.md  004-cli-provider-pattern.md  005-event-driven-architecture.md  006-separate-sqlite-databases.md  007-embedded-svelte-web-ui.md  008-mcp-integration-layer.md  009-director-ooda-loop.md  010-channel-adapter-pattern.md  README.md
docs/api/: README.md  auth-and-rbac.md  gateway-rest.md  gateway-websocket.md  mcp-server.md  webhook-format.md
docs/architecture/: concurrency-model.md  context-composition.md  data-flow.md  execution-model.md  persistence.md  system-overview.md
docs/crates/: README.md  ryvos-agent.md  ryvos-channels.md  ryvos-core.md  ryvos-gateway.md  ryvos-llm.md  ryvos-mcp.md  ryvos-memory.md  ryvos-skills.md  ryvos-test-utils.md  ryvos-tools.md  ryvos-tui.md
docs/guides/: adding-a-channel.md  adding-a-skill.md  adding-a-tool.md  adding-an-llm-provider.md  configuring-safety.md  customizing-the-soul.md  debugging-runs.md  migrating-from-tier-security.md  wiring-an-mcp-server.md  writing-a-goal.md
docs/internals/: agent-loop.md  checkpoint-resume.md  cost-tracking.md  cron-scheduler.md  director-ooda.md  event-bus.md  graph-executor.md  guardian.md  heartbeat.md  judge.md  mcp-bridge.md  output-validator.md  reflexion.md  safety-memory.md  session-manager.md  tool-registry.md
docs/operations/: backup-and-restore.md  configuration.md  deployment.md  environment-variables.md  monitoring.md  troubleshooting.md  upgrading.md
src/: doctor.rs  main.rs  viking_server.rs
src/onboard/: banner.rs  budget.rs  channels.rs  context_tuning.rs  cron.rs  director.rs  embedding.rs  gateway.rs  google.rs  guardian.rs  health_check.rs  heartbeat.rs  hooks.rs  mcp_servers.rs  mod.rs  notion.rs  project_mgmt.rs  providers.rs  sandbox.rs  security.rs  service.rs  skills.rs  viking.rs  web_search.rs  whatsapp.rs
src/onboard/templates/: BOOT.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  TOOLS.md  memory_facts.md  memory_preferences.md  memory_projects.md
tests/: config_loading.rs  heartbeat_config.rs
