[package]
name = "ryvos-channels"
version.workspace = true
edition.workspace = true

[dependencies]
ryvos-core.workspace = true
ryvos-agent.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
teloxide = { version = "0.13", default-features = false, features = ["macros", "rustls"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
reqwest.workspace = true
tokio-tungstenite.workspace = true
