[package]
name = "ryvos-llm"
version.workspace = true
edition.workspace = true
description = "Multi-provider LLM client with SSE streaming"

[dependencies]
ryvos-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio-util.workspace = true
bytes = "1"
rand.workspace = true
