[package]
name = "ryvos-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
ryvos-core.workspace = true
ryvos-tools.workspace = true
ryvos-memory.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rmcp.workspace = true
http.workspace = true
chrono.workspace = true
rusqlite.workspace = true
schemars = "1"

[dev-dependencies]
ryvos-test-utils = { path = "../ryvos-test-utils" }
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
serde_json = { workspace = true }
