[package]
name = "ryvos-memory"
version.workspace = true
edition.workspace = true
description = "SQLite + FTS5 persistence for Ryvos"

[dependencies]
ryvos-core.workspace = true
rusqlite.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
