[package]
name = "ryvos-skills"
version.workspace = true
edition.workspace = true

[dependencies]
ryvos-core.workspace = true
ryvos-tools.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true
