[package]
name = "ryvos-test-utils"
version.workspace = true
edition.workspace = true
description = "Shared test utilities, mocks, and fixtures for Ryvos crates"

[dependencies]
ryvos-core = { path = "../ryvos-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
