[package]
name = "ryvos-tools"
version.workspace = true
edition.workspace = true
description = "Built-in tools and tool registry for Ryvos"

[dependencies]
ryvos-core.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
bollard.workspace = true
chrono.workspace = true
regex.workspace = true
glob = "0.3"
walkdir = "2"
