[package]
name = "ryvos-tools"
version.workspace = true
edition.workspace = true
description = "Built-in tools and tool registry for Ryvos"

[dependencies]
ryvos-core.workspace = true
ryvos-memory.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
bollard.workspace = true
chrono.workspace = true
regex.workspace = true
toml.workspace = true
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
base64 = "0.22"
glob = "0.3"
walkdir = "2"
similar = "2"

[dev-dependencies]
ryvos-test-utils = { path = "../ryvos-test-utils" }
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
